--- a/WEB/WEB.csproj
+++ b/WEB/WEB.csproj
@@ -219,6 +219,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Model\DoctorScheduleInfo.cs" />
+    <Compile Include="Model\DoctorTimeGroupModel.cs" />
+    <Compile Include="Model\DoctorTimeInfo.cs" />
     <Compile Include="Model\LetterOfAcceptanceModel.cs" />
     <Compile Include="Model\MeetingScheduleInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -378,6 +380,7 @@
     <Content Include="Content\images\tips_down%402x.png" />
     <Content Include="Content\images\tj%402x.png" />
     <Content Include="Content\images\tm%402x.png" />
+    <Content Include="Content\images\touxiang.jpg" />
     <Content Include="Content\images\tpic.png" />
     <Content Include="Content\images\v%402x.png" />
     <Content Include="Content\images\VectorSmartObject%402x.png" />
