调研功能修改

--- a/WEB/Web.config
+++ b/WEB/Web.config
@@ -10,8 +10,8 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <connectionStrings>
-    <!--
-    <add name="DBContext" connectionString="Server=120.27.130.84;Port=9800;user=bms;pwd=bms@84;Database=iomeeting" providerName="MySql.Data.MySqlClient"/>
+    
+    <!--<add name="DBContext" connectionString="Server=120.27.130.84;Port=9800;user=bms;pwd=bms@84;Database=iomeeting" providerName="MySql.Data.MySqlClient"/>
     <add name="DataPath" connectionString="http://vmeeting.bms.com.cn:8080/" />
     <add name="url" connectionString="https://iowechat.bms.com.cn/" />
     <add name="userinfourl" connectionString="https://iowechat.bms.com.cn/portal/wechat/user " />
@@ -24,8 +24,8 @@
     <add name="tmpKey" connectionString="8ZeH1QyT76pRL2L7pcajpex3FNKX9tNSCwlw19corwo" />
     <add name="SurveytmpKey" connectionString="ZZqh2lMZhJ1NXZh1Q_bPNv2QGSeXUuRtyJG1sF_weRI" />
     <add name="weixin.AppID" connectionString="wxc1e0087b6e7c7784" />
-    <add name="updateurl" connectionString="http://vmeeting.bms.com.cn:8080/Data/Synchronization" />
-    -->
+    <add name="updateurl" connectionString="http://vmeeting.bms.com.cn:8080/Data/Synchronization" />-->
+    
     
     
     
@@ -67,6 +67,42 @@
     <add name="MeetingInvitationTemplateId" connectionString="8ZxEFHuTGO7cBh8yoMFyTQwsZWrbTtrnbH8HXCrLgF4"/>
     <!--<add name="qrHost" connectionString="http://vmeeting.bms.com.cn/" />-->
     <add name="qrHost" connectionString="http://open.weixin.ecache.com.cn/IO/" />
+
+
+    <!--<add name="DBContext" connectionString="Server=120.27.130.84;Port=9800;user=bms;pwd=bms@84;Database=iomeeting" providerName="MySql.Data.MySqlClient"/>
+    <add name="DataPath" connectionString="http://vmeeting.bms.com.cn:8080/" />
+    <add name="url" connectionString="https://iowechat.bms.com.cn/" />
+    <add name="userinfourl" connectionString="https://iowechat.bms.com.cn/portal/wechat/user " />
+    <add name="signregister" connectionString="https://iowechat.bms.com.cn/portal/wechat/vmeeting/register?meeting_id={0}" />
+    <add name="Host" connectionString="http://vmeeting.bms.com.cn/IO/" />
+    <add name="open.weixin.AppID" connectionString="wxe678a091b9054373" />
+    <add name="open.weixin.AppSecret" connectionString="06b0c703d52f715f7d12ee61a20b27d4" />
+    <add name="open.weixin.Token" connectionString="ecache" />
+    <add name="open.weixin.Key" connectionString="abc012365478996325874100123654789abcde14562" />
+    <add name="tmpKey" connectionString="8ZeH1QyT76pRL2L7pcajpex3FNKX9tNSCwlw19corwo" />
+    <add name="SurveytmpKey" connectionString="ZZqh2lMZhJ1NXZh1Q_bPNv2QGSeXUuRtyJG1sF_weRI" />
+    <add name="weixin.AppID" connectionString="wxc1e0087b6e7c7784" />
+    <add name="updateurl" connectionString="http://vmeeting.bms.com.cn:8080/Data/Synchronization" />
+
+    <add name="pid" connectionString="YnyNdqeBItF2unXJ" />
+    <add name="key" connectionString="qAs9Ka92CNtup0dF" />
+    <add name="userInfo" connectionString="/api/provide/user/fetch" />
+    <add name="getqr" connectionString="/api/provide/wechat/qr" />
+    <add name="getsmscode" connectionString="/api/user/sms_code" />
+    <add name="register" connectionString="/api/user/registration" />
+    <add name="changeemail" connectionString="/api/provide/user/edit" />
+
+    <add name="EmailHost" connectionString="smtpdm.aliyun.com" />
+    <add name="EmailPort" connectionString="80" />
+    <add name="EmailUserName" connectionString="no-reply@document.bms.com.cn" />
+    <add name="EmailPassWord" connectionString="DAinty68866" />
+    <add name="EmailEnableSsl" connectionString="false" />
+
+    <add name="FilePreViewTest" connectionString="http://ow365.cn/?i=13539&amp;furl=http://daduhui.ecache.com.cn/bms_test/" />
+    <add name="FilePreView" connectionString="http://ow365.cn/?i=13539&amp;furl=http://daduhui.ecache.com.cn/bms/" />
+    <add name="IsTestFilePreView" connectionString="false" />
+    <add name="MeetingInvitationTemplateId" connectionString="6njVUEnmPMvGI32yEH8SD3TIXuS_RvM_cJPOzuv-zVA"/>
+    <add name="qrHost" connectionString="http://vmeeting.bms.com.cn/IO/" />-->
   </connectionStrings>
   <!--日志的配置开始-->
   <log4net>
